--- a/BTP/d3/index.html
+++ b/BTP/d3/index.html
@@ -5,12 +5,15 @@
 	<head>
 		<meta charset="utf-8">
 		<title> D3 viz test </title>
-		<script type="text/javascript" src="d3/d3.js"></script>
+		<script type="text/javascript" src="../d3/d3.js"></script>
 	</head>
 
 	<body>
 		<script type="text/javascript">
 		// Write your code here
+		d3.select("body").append("p").text("New Paragraph !");
 		</script>
+		<p>New paragraph !</p>
 	</body>
+
 </html>
