--- a/BTP/d3/bars_svg.html
+++ b/BTP/d3/bars_svg.html
@@ -40,7 +40,28 @@
 			   .attr("width",w/dataset.length - pad)
 			   .attr("height",function(d){
 			   		return d*4;
+			   })
+			   .attr("fill", function(d) {
+			   		return "rgb(0,0, " + (d*10) + ")";
 			   });
+
+			// Now, adding labels
+			svg.selectAll("text")
+			   .data(dataset)
+			   .enter()
+			   .append("text")
+			   .text(function(d) {
+			   		return d;
+			   })
+			   .attr("x",function(d,i) {
+			   		return i*(w/dataset.length) + 5;
+			   })
+			   .attr("y",function(d) {
+			   		return h - (d*4) + 14;
+			   })
+			   .attr("font-family","sans-serif")
+			   .attr("font-size","11px")
+			   .attr("fill","white");
 
 		</script>
 	</body>
