--- a/BTP/d3/scatter_plot.html
+++ b/BTP/d3/scatter_plot.html
@@ -15,9 +15,24 @@
                 [410, 12], [475, 44], [25, 67], [85, 21], [220, 88]];
 
         // Creating an svg element
-        var h = 100;
+        var h = 300;
         var w = 500;
+        var pad = 20;
 
+		// Now, let's work with scales
+       	var xscale = d3.scale.linear()
+       						 .domain([d3.min(dataset, function(d) {return d[0]; }), d3.max(dataset, function(d) {return d[0]; })])
+       						 .range([pad,w-pad*2]);
+
+       	var yscale = d3.scale.linear()
+       						 .domain([d3.min(dataset, function(d) {return d[1]; }), d3.max(dataset, function(d) {return d[1]; })])
+       						 .range([h-pad,pad]);
+
+       	var rscale = d3.scale.linear()
+       						 .domain([d3.min(dataset, function(d) {return d[1]; }), d3.max(dataset, function(d) {return d[1]; })])
+       						 .range([2,5]);
+
+       	//Creating the svg
         var svg = d3.select("body")
         		    .append("svg")
         		    .attr("width" , w)
@@ -28,13 +43,13 @@
        	   .enter()
        	   .append("circle")
        	   .attr("cx", function(d) {
-       	   		return d[0];
+       	   		return xscale(d[0]);
        	   })
        	   .attr("cy", function(d) {
-       	   		return d[1];
+       	   		return yscale(d[1]);
        	   })
        	   .attr("r", function(d) {
-       	   		return Math.sqrt(h-d[1]);
+       	   		return rscale(d[1]);
        	   });
 
        	svg.selectAll("text")
@@ -45,20 +60,16 @@
        	   		return d[0] + "," + d[1];
        	   })
        	   .attr("x", function(d) {
-       	   		return d[0];
+       	   		return xscale(d[0]);
        	   })
        	   .attr("y", function(d) {
-       	   		return d[1];
+       	   		return yscale(d[1]);
        	   })
        	   .attr("font-family", "sans-serif")
        	   .attr("font-size", "11px")
-       	   .attr("fill", "red")
+       	   .attr("fill", "red");
 
-       	// Now, let's work with scales
-       	var xscale = d3.scale.linear()
-       						 .domain([d3.min(dataset, function(d) {return d[0]; }), d3.max(dataset, function(d) {return d[0]; })])
-       						 .range([0,w]);
-
+       	
 		</script>
 	</body>
 
