--- a/BTP/d3/bars_svg.html
+++ b/BTP/d3/bars_svg.html
@@ -38,6 +38,8 @@
 			   		return h-(d*4);
 			   })
 			   .attr("width",w/dataset.length - pad)
+			   .transition().delay(function (d,i){ return i * 300;})
+			   .duration(300)
 			   .attr("height",function(d){
 			   		return d*4;
 			   })
