Added the IndPak analysis

--- a/BTP/d3/cic_pie.html
+++ b/BTP/d3/cic_pie.html
@@ -15,7 +15,6 @@
     #chart2 {
       overflow: hidden;
       padding-left: 30px;
-      width: 300px;
     }
 
     #chart3 {
@@ -25,19 +24,71 @@
     }
     #pp {
       float: right;
-
+      }
+    #a {
+      text-align: center;
     }
+
+    #i1 {
+      margin-right: 200px;
+    }
+
+    #i2 {
+      margin-left: 200px;
+    }
+
+    
 
     </style>
   </head>
 
   <body>
     <u><h2>Analysis for India vs Pakistan match at Adelaide</h2></u>
-    <div id="chart"></div>
-    <div id="chart2">
-        <p id="pp">xyz</p>
+    <div id="chart">
+    </div>
+    <div id="chart2">    
     </div>
     <div id="chart3"></div>
+     <ul>
+      <li>India has played <b>119</b> matches with Pakistan as an overall head-to-head; but only managed to win on 46 occasions as opposing to Pakistan's <b>73</b>.</li> 
+      <li>Wheras, if the data after 2011 is analyzed, India has won 4 out of <b>7</b> matchas as opposed to Pakistan's <b>3</b>. </li>
+      <li>But, when it comes to the Australia/New Zealand venues, India has won <b>8</b> of their <b>4</b> matchas, all of them have been due to the batting performances.</p></li>
+    </ul>
+    <br></br>
+
+    <ul>
+      <li>As Adelaide has been a batting pitch since long, let us consider some Indian batsmen who have been top performers versus Pakinstan since 2011</li> 
+    </ul>
+    <div id="a">
+      <img src="../d3/dhoni.jpg" id="i1">
+      <img src="../d3/rohit.jpg">
+    </div>
+    <ul>
+      <li>Here are India's top bowlers since 2011 against Pakistan</li>
+    </ul>
+    <div id="a">
+      <img src="../d3/ashwin.jpg" id="i1">
+      <img src="../d3/bhuvi.jpg">
+    </div>
+
+    <ul>
+      <li>Now coming to the Pakistan's side, here are their top performers against India with the bat:</li>
+    </ul>
+    <div id="a">
+      <img src="../d3/hafeez.jpg" id="i1">
+      <img src="../d3/jamshed.jpg">
+    </div>
+
+    <ul>
+      <li>Pakistan's top players with the ball:</li>
+    </ul>
+    <div id="a">
+      <img src="../d3/junaid.jpg" id="i1">
+      <img src="../d3/ajmal.jpg">
+    </div>
+
+
+
 
     <script type="text/javascript">
       var w = 200;
